--- a/.gitignore
+++ b/.gitignore
@@ -1,101 +1,6 @@
-Chat, tenho essse end point
-
-import FeeBranchPackageGetAllUseCase from './feeBranchPackageGetAllUseCase.js' 
-import ApiResponse from '#core/http/apiResponse.js'
-
-export default async function feeBranchPackageGetAllEndpoint(req, res) {
-  const useCase = new FeeBranchPackageGetAllUseCase()
-  const result = await useCase.execute(req)
-
-  if (result.isFailure) {
-    const badRequestResponse = ApiResponse.createBadRequestResponse({ error: result.error })
-    return res.status(badRequestResponse.code).json(badRequestResponse)
-  }
-
-  const okResponse = ApiResponse.createOkResponse(result.value)
-
-  res.json(okResponse)
-}
-
-Com esse router
-
-import { Router } from 'express'
-import feeBranchPackageGetAllEndpoint from './feeBranchPackageGetAllEndpoint.js'
-
-const feeBranchPackageGetAllRouter = Router()
-
-feeBranchPackageGetAllRouter.get('/fee/branch', feeBranchPackageGetAllEndpoint)
-
-export default feeBranchPackageGetAllRouter
-
-E com esse useCase:
-
-import Result from '#features/shared/result.js'
-import { getBranchPackageOffice } from '#src/models/FeePackage.js'
-
-export default class feeBranchPackageGetAllUseCase {
-  async execute(req) {
-    const officePackages = await getBranchPackageOffice()
-
-    return Result.ok(officePackages)
-  }
-}
-
-
-Ao chamar no postman essa url:
-
-http://localhost:3333/v1/fee/branch
-
-
-Tomo esse erro....que provavelmente vem dessa function:
-
-export async function getBranchPackageOffice() {
-  const connection = await connectToFeeMgmtDb()
-  const recordset = await executeStoreProcedure(connection, 'sp_get_branch_feepackage_info_offr', { })
-
-  const listOfficerPackage = recordset.map(record => {
-    const branchId = record.branch_id
-    const branchType = record.branch_type
-    const bussinessPackage = record.business_package
-    const bussinessPackageDescription = record.business_package_description
-    const city = record.city
-    const director = record.director.trim()
-    const individualPackage = record.individual_package
-    const individualPackageDescription = record.individual_package_description
-    const offPackage = record.off_package
-    const officerName = record.state
-    
-    return {
-       branchId, 
-       branchType,
-       bussinessPackage,
-       bussinessPackageDescription,
-       city,
-       director,
-       individualPackage,
-       individualPackageDescription,
-       offPackage,
-       officerName
-    }
-  })
-
-  return listOfficerPackage
-}
-
-
-[20:53:45.338] INFO (432): Starting configuration for env: Local
-[20:53:45.338] INFO (432): Loading env using file H:\Documents\fee-management-backend\.env
-[20:53:45.352] INFO (432): bootstraping application
-[20:53:45.758] INFO (432): Server started on :::3333
-[20:54:22.665] ERROR (432): Unhandled Promise Rejection: err: 
-[20:54:22.665] ERROR (432): RequestError: Invalid column name 'PackageID'.
-    at handleError (H:\Documents\fee-management-backend\node_modules\mssql\lib\tedious.js:888:15)
-    at Connection.emit (node:events:513:28)
-    at Parser.<anonymous> (H:\Documents\fee-management-backend\node_modules\tedious\lib\connection.js:716:12)
-    at Parser.emit (node:events:513:28)
-    at Parser.<anonymous> (H:\Documents\fee-management-backend\node_modules\tedious\lib\token\token-stream-parser.js:27:14)
-    at Parser.emit (node:events:513:28)
-    at addChunk (H:\Documents\fee-management-backend\node_modules\tedious\node_modules\readable-stream\lib\_stream_readable.js:279:12)
-    at readableAddChunk (H:\Documents\fee-management-backend\node_modules\tedious\node_modules\readable-stream\lib\_stream_readable.js:262:11)
-    at Parser.Readable.push (H:\Documents\fee-management-backend\node_modules\tedious\node_modules\readable-stream\lib\_stream_readable.js:228:10)
-    at Parser.Transform.push (H:\Documents\fee-management-backend\node_modules\tedious\node_modules\readable-stream\lib\_stream_transform.js:132:32)
+SELECT 
+    OBJECT_NAME(object_id) AS ProcedureName,
+    ISNULL(CAST(IS_ENCRYPTED AS BIT), 0) AS IsEncrypted
+FROM sys.objects
+WHERE type = 'P' -- 'P' é o tipo de objeto para stored procedures
+AND OBJECT_NAME(object_id) = 'sp_get_branch_feepackage_info_offr';
